# format-json

./: .eslintrc.json  .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: index.html  main.ts  styles.css  styles.css.map  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app-routing.module.ts  app.component.css  app.component.css.map  app.component.spec.ts  app.component.ts  app.module.ts
src/app/components/dialog-confirm/: dialog-confirm.component.html  dialog-confirm.component.ts
src/app/components/dialog-login/: dialog-login.component.css  dialog-login.component.css.map  dialog-login.component.html  dialog-login.component.ts
src/app/components/dialog-register/: dialog-register.component.html  dialog-register.component.spec.ts  dialog-register.component.ts
src/app/components/header/: header.component.html  header.component.scss  header.component.ts
src/app/components/json-chart/: json-chart.component.ts
src/app/components/open-file/: open-file.component.html  open-file.component.scss  open-file.component.spec.ts  open-file.component.ts
src/app/models/: api-types.ts
src/app/pipes/: prettyjson.pipe.spec.ts  prettyjson.pipe.ts
src/app/services/: api.service.ts  auth.service.ts  intercepctor.ts  interceptor.ts  json-default.ts  socket.service.ts  updater.service.ts
src/environments/: environment.ts
(+41 files in other folders)
